--- a/src/widgets/FlistRow/ui/FlistRowListItem/FlistRowListItem.module.css
+++ b/src/widgets/FlistRow/ui/FlistRowListItem/FlistRowListItem.module.css
@@ -1,5 +1,6 @@
 .item {
   margin-right: 5px;
+  width: max-content;
 }
 
 .item p {
